load and store witvilet graphs, update data-pulling structure to include parent package 'c_elegans', add witvilet-specific attributes such as age and microscopy method

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ temp.xlsx
 worm_wiring/__pycache__
 worm_wiring/.DS_Store
 worm_wiring/graphs/.DS_Store
+graph/__pycache__
 
 # Default .gitignores from template
 
