--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title                       : Maggot Connectome  # The title of the book. Will be placed in the left navbar.
+title                       : Connectocross  # The title of the book. Will be placed in the left navbar.
 author                      : NeuroData  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
 logo                        : ./images/nd_logo.png  # A path to the book logo
